src/Components/styles/secondDiv.css
@media only screen and (min-width: 700px) {
    .second-div-container {
        background-color: black;
        color: white;
        display: flex;
        flex-wrap: wrap;
        padding: 5rem;
    }
    
    .second-div-container > div {
        min-width: 30rem;
        flex: 0.5;
    }
    
    h2 {
        text-decoration: underline;
        text-align: center;
        margin-bottom: 1.5rem;
        letter-spacing: 0.3rem;
    }
    
    p {
        line-height: 2.5rem;
        font-size: 1.2rem;
    }
    
    .purple-text {
        color: #8860D0;
    }
    
    .superset {
        height: 25rem;
        width: 25rem;
        margin: 0 auto;
        margin-top: 5rem;
        position: relative;
    }
    
    .subset {
        height: 100%;
        width: 100%;
        background-color: #8860D0;
        transform: rotate(-10deg);
        position: absolute;
        top: 0;
        left: 0;
        z-index: 0;
    }
    
    .ife-image {
        height: 100%;
        width: 100%;
        position: absolute;
        top: 0;
        left: 0;
        z-index: 100;
    }
}

@media only screen and (max-width: 700px) {
    .second-div-container {
        background-color: black;
        color: white;
        padding: 2rem;
    }
    
    h2 {
        text-decoration: underline;
        text-align: center;
        margin-bottom: 1.5rem;
        letter-spacing: 0.3rem;
        font-size: 1.2rem;
    }
    
    p {
        line-height: 2.5rem;
        font-size: 1rem;
    }
    
    .purple-text {
        color: #8860D0;
    }
    
    .superset {
        height: 15rem;
        width: 15rem;
        margin: 0 auto;
        margin-top: 2rem;
        position: relative;
    }
    
    .subset {
        height: 100%;
        width: 100%;
        background-color: #8860D0;
        transform: rotate(-10deg);
        position: absolute;
        top: 0;
        left: 0;
        z-index: 0;
    }
    
    .ife-image {
        height: 100%;
        width: 100%;
        position: absolute;
        top: 0;
        left: 0;
        z-index: 100;
    }
}

